--- a/courier-vuser-admin.conf
+++ b/courier-vuser-admin.conf
@@ -1,3 +1,3 @@
 
-WSGIScriptAlias /cgi-bin/courier-vuser-admin/ /srv/courier-vuser-admin/src/wsgi.py/
+WSGIScriptAlias /courier-vuser-admin/ /srv/courier-vuser-admin/src/wsgi.py/
 
