--- a/courier-vuser-admin.conf
+++ b/courier-vuser-admin.conf
@@ -1,4 +1,4 @@
 WSGIPassAuthorization On
 WSGIScriptAlias /courier-vuser-admin/ /srv/courier-vuser-admin/src/wsgi.py/
-WSGIDaemonProcess courier-vuser-admin user=vmail
+WSGIDaemonProcess default user=vmail
 
